[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-stream = "0.3.5"
humansize = "2.1.3"
iced = { version = "0.12.1", features = ["image", "advanced", "tokio"] }
reqwest = "0.12.4"
